--- a/playbook.yml
+++ b/playbook.yml
@@ -1,46 +1,32 @@
 ---
-- name: Install Docker on remote host
-  hosts: centos_remote_a
+- name: Install Docker on Ubuntu
+  hosts: all
   become: true
   tasks:
-    - name: upgrade all packages
-      yum:
-        name: '*'
-        state: latest
-        exclude: kernel*
-    - name: Add package epel-release
-      yum:
-        name:
-          - epel-release
-        state: present
-    - name: Install packages needed for docker and its ecosystem
-      yum:
-        name:
-          - yum-utils
-          - device-mapper-persistent-data
-          - lvm2
-          - python3
-          - python3-pip
-          - htop
-          - iotop
-          - iftop
-        state: present
-    - name: Set up a stable docker repository
-      command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-    - name: Install docker packages
-      yum:
-        name:
+    - name: update all packages
+      apt:
+        update_cache: yes
+    - name: Add pre-requisite packages
+      apt:
+        pkg:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - gnupg-agent
+          - software-properties-common
+    - name: Add official GPG key
+      shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+    - name: add specificed repository into source list
+      shell: add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
+    - name: update all packages
+      apt:
+        update_cache: yes
+    - name: install docker packages
+      apt:
+        pkg:
           - docker-ce
           - docker-ce-cli
           - containerd.io
-        state: present
-    - name: start service
-      service:
-        name: docker
-        state: started
-    - name: Enable docker service
-      service:
-        name: docker
-        enabled: yes
     - name: Set current user to docker group
       command: usermod -aG docker {{ ansible_user }}
+
