--- a/run-conference-app.yml
+++ b/run-conference-app.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Jenkins CI/CD
-  hosts: centos_remote_a
+  hosts: ubuntu15
   tasks:
     - name: Docker test exists
       shell: docker ps --all --quiet --filter=name="conference-test"
