--- a/run-conference-app.yml
+++ b/run-conference-app.yml
@@ -21,4 +21,4 @@
       ignore_errors: yes
 
     - name: Start test container
-      shell: docker run -d --name conference-app -p 10100:8080 aderesnes/conference-app
+      shell: docker run -d --name conference-app -p 10100:8080 aderesnes/conference-app:latest
